fixed extra spacing on last-child of nested list items

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -264,3 +264,6 @@ span.linethrough
   margin-bottom: 0
 #content li div.content>pre
   margin-bottom: 0
+
+#content ul[class^="sectlevel"]>li
+    margin-bottom: 0
